Add @EXEEXT@ to Guile executable paths
Fixes this MinGW build error:

cat alist.doc arbiters.doc async.doc backtrace.doc boolean.doc chars.doc continuations.doc debug.doc deprecation.doc deprecated.doc discouraged.doc dynl.doc dynwind.doc environments.doc eq.doc error.doc eval.doc evalext.doc extensions.doc feature.doc fluids.doc fports.doc futures.doc gc.doc goops.doc gsubr.doc gc-mark.doc gc-segment.doc gc-malloc.doc gc-card.doc guardians.doc hash.doc hashtab.doc hooks.doc i18n.doc init.doc ioext.doc keywords.doc lang.doc list.doc load.doc macros.doc mallocs.doc modules.doc numbers.doc objects.doc objprop.doc options.doc pairs.doc ports.doc print.doc procprop.doc procs.doc properties.doc random.doc rdelim.doc read.doc root.doc rw.doc scmsigs.doc script.doc simpos.doc smob.doc sort.doc srcprop.doc stackchk.doc stacks.doc stime.doc strings.doc srfi-4.doc srfi-13.doc srfi-14.doc strorder.doc strports.doc struct.doc symbols.doc threads.doc throw.doc values.doc variable.doc vectors.doc version.doc vports.doc weaks.doc ramap.doc unif.doc dynl.doc filesys.doc posix.doc net_db.doc socket.doc win32-uname.doc win32-dirent.doc win32-socket.doc inet_aton.doc mkstemp.doc | GUILE="/home/neil/SW/Guile/branch_release-1-8/pre-inst-guile" ../scripts/snarf-check-and-output-texi          > guile-procedures.texi || { rm guile-procedures.texi; false; }
/home/neil/SW/Guile/branch_release-1-8/pre-inst-guile: line 94: /home/neil/SW/Guile/branch_release-1-8/libguile/guile: No such file or directory
/home/neil/SW/Guile/branch_release-1-8/pre-inst-guile: line 94: exec: /home/neil/SW/Guile/branch_release-1-8/libguile/guile: cannot execute: No such file or directory

* pre-inst-guile-env.in, pre-inst-guile.in: Add @EXEEXT@

--- a/pre-inst-guile-env.in
+++ b/pre-inst-guile-env.in
@@ -78,4 +78,8 @@ PATH="${top_builddir}/guile-config:${PATH}"
 PATH="${top_builddir}/libguile:${PATH}"
 export PATH
 
+# set GUILE (clobber)
+GUILE=${top_builddir}/libguile/guile@EXEEXT@
+export GUILE
+
 exec "$@"
