add lua language implementation
What is missing:

+ Functions: module, getfenv, setfenv, math.modf, table.sort

+ Parser: needs to be more flexible

+ Compiler: needs more extensive work to properly handle all possible
cases of variable arguments, multiple returns, and loops

+ Language: Variable arguments and unpacking of multiple returns. (For
example we need to be able to handle something as complex as
print(unpack({...})), which is easy with Lua's explicit stack but will
require lots of tree-il gymnastics, or perhaps modifications to better
allow different calling conventions. (For instance -- how would we
support Python or Ruby, where keyword arguments are gathered into a
hashtable and passed as a single argument?)

What is there:

A fair shot at supporting Lua 5.1, not quite a drop-in replacement, but
not far from that goal either.

--- a/module/Makefile.am
+++ b/module/Makefile.am
@@ -71,6 +71,7 @@ SOURCES =					\
   $(SCRIPTS_SOURCES)				\
   $(ECMASCRIPT_LANG_SOURCES)			\
   $(ELISP_LANG_SOURCES)				\
+  $(LUA_LANG_SOURCES)				\
   $(BRAINFUCK_LANG_SOURCES)			\
   $(LIB_SOURCES)				\
   $(WEB_SOURCES)
@@ -174,6 +175,18 @@ ELISP_LANG_SOURCES =				\
   language/elisp/runtime/function-slot.scm	\
   language/elisp/runtime/value-slot.scm		\
   language/elisp/spec.scm
+
+LUA_LANG_SOURCES =				\
+  language/lua/common.scm			\
+  language/lua/runtime.scm			\
+  language/lua/lexer.scm			\
+  language/lua/parser.scm			\
+  language/lua/compile-tree-il.scm		\
+  language/lua/standard/io.scm			\
+  language/lua/standard/math.scm		\
+  language/lua/standard/os.scm			\
+  language/lua/standard/table.scm		\
+  language/lua/spec.scm
 
 BRAINFUCK_LANG_SOURCES =			\
   language/brainfuck/parse.scm			\
