--- a/test-suite/Makefile.am
+++ b/test-suite/Makefile.am
@@ -69,6 +69,10 @@ SCM_TESTS = tests/00-initial-env.test		\
 	    tests/keywords.test			\
 	    tests/list.test			\
 	    tests/load.test			\
+	    tests/lua-eval.test			\
+	    tests/lua-eval-2.test		\
+	    tests/lua-lexer.test		\
+	    tests/lua-standard-library.test	\
 	    tests/match.test			\
 	    tests/match.test.upstream		\
 	    tests/modules.test			\
