--- a/configure.in
+++ b/configure.in
@@ -5,7 +5,7 @@ dnl
 define(GUILE_CONFIGURE_COPYRIGHT,[[
 
 Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
-  2006, 2007, 2008, 2009, 2011 Free Software Foundation, Inc.
+  2006, 2007, 2008, 2009, 2011, 2012 Free Software Foundation, Inc.
 
 This file is part of GUILE
 
@@ -101,7 +101,7 @@ AM_PATH_LISPDIR
 #
 #--------------------------------------------------------------------
 
-GUILE_ERROR_ON_WARNING="yes"
+GUILE_ERROR_ON_WARNING="no"
 
 AC_ARG_ENABLE(error-on-warning,
   [  --enable-error-on-warning    treat compile warnings as errors],
