Fix configure.in macro for automake-1.13
Reported through https://bugs.gentoo.org/show_bug.cgi?id=467064
Fix by Arfrever Frehtes Taifersar Arahesis

* Replace AM_CONFIG_HEADER by AC_CONFIG_HEADERS, the former
  being deprecated since automake-1.13

Signed-off-by: Ludovic Courtès <ludo@gnu.org>

--- a/guile-readline/configure.in
+++ b/guile-readline/configure.in
@@ -9,14 +9,13 @@ AC_INIT(guile-readline,
 
 AC_CONFIG_AUX_DIR([.])
 AC_CONFIG_SRCDIR(readline.c)
-AM_CONFIG_HEADER([guile-readline-config.h])
+AC_CONFIG_HEADERS([guile-readline-config.h])
 AM_INIT_AUTOMAKE([foreign no-define])
 
 . $srcdir/../GUILE-VERSION
 
 AC_PROG_INSTALL
 AC_PROG_CC
-AM_PROG_CC_STDC
 AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
 
